# molecule-optimizer

./: Cargo.toml  TP3_H22_Rapport.docx  TP3_H22_Sujet.docx  check_sol.py  inst_gen.py  tp.sh
data/: N1000_K6_0  N1000_K6_1  N1000_K6_2  N100_K3_0  N100_K3_1  N100_K3_2
src/: main.rs
test/: Test1  Test1_res.txt  Test2  Test2_res.txt  Test3  Test3_res.txt  resultat.txt
